<resources>
    <string name="app_name">RoomTest-education-</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">description</string>
    <string name="btn_back_text">Back</string>
    <string name="btn_delete_text">Delete</string>
    <string name="details_description">Description</string>
    <string name="details_title">Title</string>
    <string name="add_note_title">Add Note</string>
    <string name="add_note_hint_title">Title</string>
    <string name="add_note_hint_description">Description</string>
    <string name="title">Title</string>
    <string name="btn_add_text">Add</string>
</resources>